updating index html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-
+<main>
 <header><img src="pitchfork-logo.svg" alt="pitchfork-logo"></header>
 <p class="category">News</p>  
 
@@ -82,7 +82,7 @@
 
 
 
-
+</main>
 
 
 </body>
