--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <p class="author">By Matthew Strauss</p>
-<p class="date"></p>February 10, 2024</p>
+<p class="date">February 10, 2024</p>
 <img style="width: 100%;" src="rock-hall-of-fame-2024.webp" alt="rock hall of fame 2024">
 
 
