--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p class="author">By Matthew Strauss</p>
 <p class="date">February 10, 2024</p>
 <img style="width: 100%;" src="rock-hall-of-fame-2024.webp" alt="rock hall of fame 2024">
-
+<figcaption>Graphic courtesy of Rock & Roll Hall of Fame Foundation and Alison Brod Marketing + Communications</figcaption>
 
 <p>The Rock & Roll Hall of Fame Foundation has announced the 2024 nominees for induction into the Rock Hall. Leading the class of 2024 nominees are first-timers Oasis, Sinéad O’Connor, Sade, Mariah Carey, and Ozzy Osbourne. Repeat nominees include A Tribe Called Quest, Eric B. & Rakim, and Mary J. Blige. See the full list of nominees below.</p>
 
@@ -71,7 +71,7 @@
 
 <p>Visit Pitchfork for <a href="https://pitchfork.com/news/rock-hall-2024-oasis-sinead-oconnor-sade-mariah-carey-nominated-for-induction/">original article</a>.</p>
 
-<footer><img src="pitchfork-logo.svg" alt="pitchfork-logo">&copy; Pitchfork 2024</footer>
+<footer>&copy; Pitchfork 2024</footer>
 
 
 
