--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
 <p class="sub-title">A Tribe Called Quest, Eric B. & Rakim, Ozzy Osbourne, Cher, Mary J. Blige, and others are also in the running for 2024 Induction</p>
 
-
+<figure>
 <p class="author">By Matthew Strauss</p>
 <p class="date">February 10, 2024</p>
 <img style="width: 100%;" src="rock-hall-of-fame-2024.webp" alt="rock hall of fame 2024">
+
 <figcaption>Graphic courtesy of Rock & Roll Hall of Fame Foundation and Alison Brod Marketing + Communications</figcaption>
+</figure>
 
 <p>The Rock & Roll Hall of Fame Foundation has announced the 2024 nominees for induction into the Rock Hall. Leading the class of 2024 nominees are first-timers Oasis, Sinéad O’Connor, Sade, Mariah Carey, and Ozzy Osbourne. Repeat nominees include A Tribe Called Quest, Eric B. & Rakim, and Mary J. Blige. See the full list of nominees below.</p>
 
